# civitas

./: CMakeLists.txt  readme.md
qml/: main.qml
src/: building.cpp  building.hpp  buildingManager.cpp  buildingManager.hpp  city.cpp  city.hpp  iBuildingManager.hpp  iResourceManager.hpp  main.cpp  resource.hpp  resourceManager.cpp  resourceManager.hpp  tests.cpp
